force-app/main/default/objects/Service_Location__c/Service_Location__c.object-meta.xml
<CustomObject>
    <description>The location where a service takes place.</description>
    <label>Service Location</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Service Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>