force-app/main/default/objects/Service_Location__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to the physical address for this service location</description>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Service Locations</relationshipLabel>
    <relationshipName>Service_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>