force-app/main/default/objects/Service_Location__c/fields/Cage__c.field-meta.xml
<CustomField>
    <fullName>Cage__c</fullName>
    <label>Cage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>