force-app/main/default/objects/Service_Location__c/fields/DMARC_Tie_down_info__c.field-meta.xml
<CustomField>
    <fullName>DMARC_Tie_down_info__c</fullName>
    <description>DMARC/Tie down info</description>
    <inlineHelpText>DMARC/Tie down info specific to a service at a service location</inlineHelpText>
    <label>DMARC/Tie down info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>