force-app/main/default/objects/Service_Location__c/fields/NameFormula__c.field-meta.xml
<CustomField>
    <fullName>NameFormula__c</fullName>
    <formula>Address__r.Name &amp; &quot; &quot; &amp; &quot; &quot; &amp; Floor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameFormula</label>
    <type>Text</type>
</CustomField>