force-app/main/default/objects/Service_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>DMARC_Tie_down_info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>